--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "camera",
-  "version": "1.0.0",
-  "description": "camera: An Ionic project",
+  "name": "camera-app",
+  "version": "1.1.1",
+  "description": "camera-app: An Ionic project",
   "dependencies": {
     "gulp": "^3.5.6",
-    "gulp-sass": "^1.3.3",
+    "gulp-sass": "^2.0.4",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
     "gulp-rename": "^1.2.0"
@@ -19,9 +19,10 @@
     "cordova-plugin-console",
     "cordova-plugin-whitelist",
     "cordova-plugin-splashscreen",
-    "com.ionic.keyboard",
-    "cordova-plugin-camera",
-    "cordova-plugin-file"
+    "cordova-plugin-statusbar",
+    "ionic-plugin-keyboard",
+    "org.apache.cordova.camera",
+    "org.apache.cordova.file"
   ],
   "cordovaPlatforms": [
     "android"
